# pimsr-inversion

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pimsr_inversion/: __init__.py  calibrate.py  calibrate2d.py  data.py  finetune.py  finetune2d.py  losses.py  network.py  network2d.py  network3d.py  physics.py  physics2d.py  train.py  train2d.py  train3d.py
tests/: test_calibrate.py  test_film.py  test_network2d.py  test_network2d_v3.py  test_network3d.py  test_network_losses.py  test_physics2d.py  test_physics_torch.py  test_train3d.py
