[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pimsr-inversion"
version = "0.1.0"
description = "Physics-informed neural inversion: multi-task subsurface property prediction with uncertainty (PIMSR)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "h5py>=3.8",
    "torch>=2.1",
]

[project.scripts]
pimsr-train = "pimsr_inversion.train:main"
pimsr-train2d = "pimsr_inversion.train2d:main"
pimsr-train3d = "pimsr_inversion.train3d:main"
pimsr-finetune = "pimsr_inversion.finetune:main"
pimsr-finetune2d = "pimsr_inversion.finetune2d:main"
pimsr-calibrate = "pimsr_inversion.calibrate:main"
pimsr-calibrate2d = "pimsr_inversion.calibrate2d:main"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 96
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
